@@ -279,6 +279,7 @@ sub print_error_messages {
   compile_not_ok('TestCase::CompileError::Interface::NativeMethod', qr/interface.+native/i);
   compile_not_ok('TestCase::CompileError::Interface::StaticMethod', qr/interface.+instance/i);
   compile_not_ok('TestCase::CompileError::Interface::ArrayElementCantAssign', qr/List to Stringable/i);
+  compile_not_ok('TestCase::CompileError::Interface::NotHaveInterfaceMethod', qr/TestCase::CompileError::Interface::NotHaveInterfaceMethod.+to_string.*string\(self\).+interface.+Stringable/i);
 }
 
 # Syntax
