@@ -1,0 +1,3 @@
+class TestCase::CompileError::Interface::NotHaveInterfaceMethod {
+  interface Stringable;
+}
